--- a/app/css/style.css
+++ b/app/css/style.css
@@ -171,7 +171,7 @@ body {
 /*sidebar*/
 /*container*/
 .container-admin {
-  width: 1150px;
+  width: 85%;
   height: 500px;
   position: relative;
   left: 15%;
@@ -226,9 +226,10 @@ body {
 /*items page*/
 /*create page*/
 .cover-img {
-  max-width: 260px;
-  max-height: 140px;
+  max-width: 300px;
+  max-height: 160px;
   min-width: 130px;
+  /*13/7 */
   min-height: 70px;
   margin: 0 auto;
   border: 1px solid rgba(24, 97, 114, 0.27);
